# gdext_coroutines

./: .gitignore  Cargo.toml  LICENSE  README.md  build_and_move_debug.bat  build_and_move_release.bat
project/: export_presets.cfg  project.godot  rust.gdextension  rust.gdextension.uid  test_from_gd_script.gd  test_from_gd_script.gd.uid  test_scene.tscn
project/godot/editor/: editor_layout.cfg  filesystem_cache8  filesystem_update4  project_metadata.cfg  recent_dirs  script_editor_cache.cfg  test_scene.tscn-editstate-cafae89b2e9ebf0216ddfb8de4de99ea.cfg  test_scene.tscn-folding-cafae89b2e9ebf0216ddfb8de4de99ea.cfg
project/godot/exported/133200997/: export-cafae89b2e9ebf0216ddfb8de4de99ea-test_scene.scn  file_cache
rust/: Cargo.toml
rust/integration_tests/: Cargo.toml
rust/integration_tests/.cargo/: config.toml
rust/integration_tests/src/: lib.rs
rust/src/: async_impl.rs  builder.rs  closure_types.rs  coroutine.rs  integration_tests.rs  lib.rs  start_async_task.rs  start_coroutine.rs  tests.rs  yielding.rs
src/: coroutine.rs  lib.rs  tests.rs  yielding.rs
tester/: default_env.tres  export_presets.cfg  project.godot  test_scene.tscn
tester/godot/editor/: editor_layout.cfg  filesystem_cache8  filesystem_update4  project_metadata.cfg  test_scene.tscn-editstate-cafae89b2e9ebf0216ddfb8de4de99ea.cfg  test_scene.tscn-folding-cafae89b2e9ebf0216ddfb8de4de99ea.cfg
