[package]
name = "gdext_coroutines"
version = "0.1.0"
authors = ["Houtamelo"]
edition = "2021"
description = "Run Rust coroutines in Godot 4.2+ (through GDExtension), inspired on Unity's Coroutines design."
license = "MIT"
repository = "https://github.com/Houtamelo/gdext_coroutines"
categories = ["game-development", "api-bindings"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = "0.1.1"
util = { package = "houtamelo_utils", version = "2.0" }

[features]
default = []
integration_tests = []