[package]
name = "gdext_coroutines"
version = "0.7.0"
authors = ["Houtamelo"]
edition = "2021"
description = "Run Rust Async functions and Coroutines in Godot 4.2+ (through GDExtension), inspired on Unity's Coroutines design."
license = "MIT"
repository = "https://github.com/Houtamelo/gdext_coroutines"
categories = ["game-development", "api-bindings", "asynchronous"]
keywords = ["godot", "coroutines", "gdextension", "async"]
readme = "../README.md"
exclude = [
    ".idea/*"
]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = {git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"]}
smol = { version = "2.0", optional = true }

[features]
default = []
async = ["dep:smol"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
