[package]
name = "gdext_coroutines"
version = "1.0.0"
authors = ["Houtamelo"]
edition = "2021"
description = "Run Rust Async functions and Coroutines in Godot 4.4+ (through GDExtension), inspired on Unity's Coroutines design."
license = "MIT"
repository = "https://github.com/Houtamelo/gdext_coroutines"
categories = ["game-development", "api-bindings", "asynchronous"]
keywords = ["godot", "coroutines", "gdextension", "async"]
readme = "../README.md"
exclude = [
    ".idea/*"
]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = { version = "0.4.5", features = ["experimental-threads"] }
parking_lot = "0.12.5"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
